// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImagePlaceholder should render dark mode version correctly 1`] = `
<div>
  <div
    class="ImagePlaceholder-sc-11u25v2-0 fAnEcu"
  />
</div>
`;

exports[`ImagePlaceholder should render landscape images correctly 1`] = `
<div>
  <div
    class="ImagePlaceholder-sc-11u25v2-0 fNqlUz"
  />
</div>
`;

exports[`ImagePlaceholder should render portrait images correctly 1`] = `
<div>
  <div
    class="ImagePlaceholder-sc-11u25v2-0 goGtge"
  />
</div>
`;

exports[`ImagePlaceholder should render square images correctly 1`] = `
<div>
  <div
    class="ImagePlaceholder-sc-11u25v2-0 iVdduF"
  />
</div>
`;
